--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,3 +14,7 @@ jobs:
         with:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
+      - uses: lowlighter/metrics@latest
+        with:
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
