--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,7 +14,7 @@ jobs:
       # isocalendar
       - uses: lowlighter/metrics@latest
         with:
-          filename: isocalendar.svg
+          filename: metrics/isocalendar.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
