--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -28,4 +28,6 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_languages: yes
-          plugin_languages_colors: "jupyter notebook:#40c463, ..."
+          plugin_languages_ignored: python
+          plugin_languages_colors: "jupyter notebook:#4b8bbe, ..."
+          plugin_languages_aliases: "jupyter notebook:Python, ..."
