--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -31,3 +31,47 @@ jobs:
           plugin_languages_ignored: python
           plugin_languages_colors: "jupyter notebook:#4b8bbe, ..."
           plugin_languages_aliases: "jupyter notebook:Python, ..."
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_details: bytes-size, percentage
+      # coding habits
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/habits.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_from: 200 
+          plugin_habits_days: 100
+          plugin_habits_facts: yes 
+          plugin_habits_charts: yes
+          plugin_habits_trim: yes
+      # issues & PRs
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/issuesPRs.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
+      # achievements
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/achievements.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_achievements: yes
+          plugin_achievements_threshold: C
+          plugin_achievements_secrets: yes
+          plugin_achievements_limit: 0
+      # website
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/website.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_pagespeed: yes
+          plugin_pagespeed_url: .user.website
