--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,7 +26,7 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          plugin_isocalendar_duration: half-year
       # languages
       - uses: lowlighter/metrics@latest
         with:
@@ -38,7 +38,7 @@ jobs:
           plugin_languages_ignored: python
           plugin_languages_colors: "jupyter notebook:#4b8bbe, ..."
           plugin_languages_aliases: "jupyter notebook:Python, ..."
-          plugin_languages_sections: most-used, recently-used
+          plugin_languages_sections: most-used #, recently-used
           plugin_languages_details: bytes-size, percentage
           plugin_languages_recent_days: 100
       # coding habits
