--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -53,7 +53,7 @@ jobs:
           plugin_habits_days: 100
           plugin_habits_facts: yes 
           plugin_habits_charts: yes
-          plugin_habits_trim: yes
+          plugin_habits_trim: no
       # issues & PRs
       - uses: lowlighter/metrics@latest
         with:
