--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -71,9 +71,10 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_achievements: yes
-          plugin_achievements_threshold: C
-          plugin_achievements_secrets: yes
-          plugin_achievements_limit: 5
+          plugin_achievements_threshold: C       
+          plugin_achievements_secrets: yes   
+          plugin_achievements_limit: 0
+          plugin_achievements_display: compact
       # website
       - uses: lowlighter/metrics@latest
         with:
