--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,8 +16,8 @@ jobs:
           filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          # stats
-          base: header, activity, community, repositories
+          # stats , repositories
+          base: header, activity, community
           # isocalendar
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
@@ -61,4 +61,4 @@ jobs:
           plugin_screenshot_selector: "#comic img" 
           plugin_screenshot_background: no 
           # order
-          config_order: base.header, base.activity, base.community, base.repositories,  isocalendar, habits, followup, achievements, languages, reactions, pagespeed, screenshot
+          config_order: base.header, base.activity, base.community, isocalendar, habits, followup, languages, achievements, reactions, pagespeed, screenshot
