--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,33 +11,28 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
+      # stats
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.svg
+          filename: metrics/stats.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          # stats 
-          base: "header, activity, community, repositories"
-          # isocalendar
+          base: header, activity, community, repositories
+      # isocalendar
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/isocalendar.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-          # coding habits
-          plugin_habits: yes
-          plugin_habits_from: 200 
-          plugin_habits_days: 100
-          plugin_habits_facts: yes 
-          plugin_habits_charts: yes
-          plugin_habits_trim: no
-          # issues & PRs
-          plugin_followup: yes
-          plugin_followup_sections: repositories, user
-          # achievements
-          plugin_achievements: yes
-          plugin_achievements_threshold: C       
-          plugin_achievements_secrets: yes   
-          plugin_achievements_limit: 0
-          plugin_achievements_display: compact
-          # languages
+      # languages
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/languages.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
           plugin_languages: yes
           plugin_languages_ignored: python
           plugin_languages_colors: "jupyter notebook:#58a6ff, html:#ff3a3a, css:#7d6cff, scss:#ff48bd, ..."
@@ -45,20 +40,70 @@ jobs:
           plugin_languages_sections: most-used #, recently-used
           plugin_languages_details: bytes-size, percentage
           plugin_languages_recent_days: 100
-          # reactions
+      # coding habits
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/habits.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_from: 200 
+          plugin_habits_days: 100
+          plugin_habits_facts: yes 
+          plugin_habits_charts: yes
+          plugin_habits_trim: no
+      # issues & PRs
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/issuesPRs.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
+      # achievements
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/achievements.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_achievements: yes
+          plugin_achievements_threshold: C       
+          plugin_achievements_secrets: yes   
+          plugin_achievements_limit: 0
+          plugin_achievements_display: compact
+      # website
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/website.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_pagespeed: yes
+          plugin_pagespeed_url: .user.website
+      # reactions
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/reactions.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
           plugin_reactions: yes
           plugin_reactions_limit: 200 
           plugin_reactions_limit_issues: 100  
           plugin_reactions_days: 100
           plugin_reactions_details: count, percentage
-          # website
-          plugin_pagespeed: yes
-          plugin_pagespeed_url: .user.website
-          # xkcd screenshot
+      # comic screenshot
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/comic.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
           plugin_screenshot: yes
           plugin_screenshot_title: Featured Webcomic Image
           plugin_screenshot_url: https://xkcd.com
           plugin_screenshot_selector: "#comic img" 
           plugin_screenshot_background: no 
-          # order
-          config_order: base.header, isocalendar, habits, followup, languages, achievements, reactions, pagespeed, screenshot
