--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,6 +18,14 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: header, activity, community, repositories
+      # contributions
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/contribs.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_notable: yes
       # isocalendar
       - uses: lowlighter/metrics@latest
         with:
@@ -40,6 +48,16 @@ jobs:
           plugin_languages_sections: most-used #, recently-used
           plugin_languages_details: bytes-size, percentage
           plugin_languages_recent_days: 100
+      # topics
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/topics.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_topics: yes
+          plugin_topics_sort: stars
+          plugin_topics_limit: 0
       # coding habits
       - uses: lowlighter/metrics@latest
         with:
