--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -66,7 +66,7 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_topics: yes
-          plugin_topics_sort: random
+          plugin_topics_sort: stars
           plugin_topics_mode: mastered
           plugin_topics_limit: 0 
       # coding habits
