--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,6 +11,30 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
+      # meme
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/memetitle.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_screenshot: yes
+          plugin_screenshot_title: Random Meme
+          plugin_screenshot_url: https://random-memer.herokuapp.com/
+          plugin_screenshot_selector: "img" 
+          plugin_screenshot_background: no
+      # image
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/imagetitle.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_screenshot: yes
+          plugin_screenshot_title: Featured Image
+          plugin_screenshot_url: https://lh3.googleusercontent.com/DvYV_4cYy3ouiukMGQsBZffVKDN8vztKZyJ-tfMke2FDPEn6xjM6VOi7qP4Dp8YTQYiuAwIk_qU9dxoXgOq_OUIm7eR-MLJdj6S-J6hbGUQGtU5-YOHI8zCR49eQUS5LcLcJ8jo7bA=w2400
+          plugin_screenshot_selector: "img"
+          plugin_screenshot_background: no
       # stats
       - uses: lowlighter/metrics@latest
         with:
@@ -135,26 +159,4 @@ jobs:
           plugin_screenshot_title: Featured Webcomic Image
           plugin_screenshot_url: https://xkcd.com
           plugin_screenshot_selector: "#comic img" 
-          plugin_screenshot_background: no
-      # meme title
-      - uses: lowlighter/metrics@latest
-        with:
-          filename: metrics/memetitle.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          base: ""
-          plugin_screenshot: yes
-          plugin_screenshot_title: Random Meme
-          plugin_screenshot_url: https://random-memer.herokuapp.com/
-          plugin_screenshot_background: no
-      # image title
-      - uses: lowlighter/metrics@latest
-        with:
-          filename: metrics/imagetitle.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          base: ""
-          plugin_screenshot: yes
-          plugin_screenshot_title: Featured Image
-          plugin_screenshot_url: https://lh3.googleusercontent.com/DvYV_4cYy3ouiukMGQsBZffVKDN8vztKZyJ-tfMke2FDPEn6xjM6VOi7qP4Dp8YTQYiuAwIk_qU9dxoXgOq_OUIm7eR-MLJdj6S-J6hbGUQGtU5-YOHI8zCR49eQUS5LcLcJ8jo7bA=w2400
           plugin_screenshot_background: no
