--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,18 +11,18 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-#       # meme screenshot
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/meme.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_screenshot: yes
-#           plugin_screenshot_title: Featured Meme
-#           plugin_screenshot_url: https://random-memer.herokuapp.com/
-#           plugin_screenshot_selector: "img" 
-#           plugin_screenshot_background: no
+      # meme screenshot
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/meme.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_screenshot: yes
+          plugin_screenshot_title: Featured Meme
+          plugin_screenshot_url: https://random-memer.herokuapp.com/
+          plugin_screenshot_selector: "img" 
+          plugin_screenshot_background: no
       # comic screenshot
       - uses: lowlighter/metrics@latest
         with:
@@ -31,120 +31,120 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           plugin_screenshot: yes
-          plugin_screenshot_title: Featured Image
+          plugin_screenshot_title: Featured Webcomic Image
           plugin_screenshot_url: https://xkcd.com/
           plugin_screenshot_selector: "#comic img" 
           plugin_screenshot_background: no
-#       # stats
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/stats.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: header, activity, community, repositories
-#       # contributions
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/contribs.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_notable: yes
-#       # isocalendar
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/isocalendar.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_isocalendar: yes
-#       # languages
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/languages.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_languages: yes
-#           plugin_languages_ignored: python
-#           plugin_languages_colors: "jupyter notebook:#58a6ff, html:#ff3a3a, css:#7d6cff, scss:#ff48bd, ..."
-#           plugin_languages_aliases: "jupyter notebook:Python, ..."
-#           plugin_languages_sections: most-used #, recently-used
-#           plugin_languages_details: bytes-size, percentage
-#           plugin_languages_recent_days: 100
-#       # topics
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/topics.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_topics: yes
-#           plugin_topics_sort: stars
-#           plugin_topics_limit: 0
-#       # mastered
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/mastered.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_topics: yes
-#           plugin_topics_sort: stars
-#           plugin_topics_mode: mastered
-#           plugin_topics_limit: 0 
-#       # coding habits
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/habits.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_habits: yes
-#           plugin_habits_from: 200 
-#           plugin_habits_days: 100
-#           plugin_habits_facts: yes 
-#           plugin_habits_charts: yes
-#           plugin_habits_trim: no
-#       # issues & PRs
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/issuesPRs.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_followup: yes
-#           plugin_followup_sections: repositories, user
-#       # achievements
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/achievements.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_achievements: yes
-#           plugin_achievements_threshold: C       
-#           plugin_achievements_secrets: yes   
-#           plugin_achievements_limit: 0
-#           plugin_achievements_display: compact
-#       # website
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/website.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_pagespeed: yes
-#           plugin_pagespeed_url: .user.website
-#       # reactions
-#       - uses: lowlighter/metrics@latest
-#         with:
-#           filename: metrics/reactions.svg
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           committer_token: ${{ secrets.GITHUB_TOKEN }}
-#           base: ""
-#           plugin_reactions: yes
-#           plugin_reactions_limit: 200 
-#           plugin_reactions_limit_issues: 100  
-#           plugin_reactions_days: 100
-#           plugin_reactions_details: count, percentage
+      # stats
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/stats.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: header, activity, community, repositories
+      # contributions
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/contribs.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_notable: yes
+      # isocalendar
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/isocalendar.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_isocalendar: yes
+      # languages
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/languages.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_languages: yes
+          plugin_languages_ignored: python
+          plugin_languages_colors: "jupyter notebook:#58a6ff, html:#ff3a3a, css:#7d6cff, scss:#ff48bd, ..."
+          plugin_languages_aliases: "jupyter notebook:Python, ..."
+          plugin_languages_sections: most-used #, recently-used
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_recent_days: 100
+      # topics
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/topics.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_topics: yes
+          plugin_topics_sort: stars
+          plugin_topics_limit: 0
+      # mastered
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/mastered.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_topics: yes
+          plugin_topics_sort: stars
+          plugin_topics_mode: mastered
+          plugin_topics_limit: 0 
+      # coding habits
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/habits.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_from: 200 
+          plugin_habits_days: 100
+          plugin_habits_facts: yes 
+          plugin_habits_charts: yes
+          plugin_habits_trim: no
+      # issues & PRs
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/issuesPRs.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
+      # achievements
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/achievements.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_achievements: yes
+          plugin_achievements_threshold: C       
+          plugin_achievements_secrets: yes   
+          plugin_achievements_limit: 0
+          plugin_achievements_display: compact
+      # website
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/website.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_pagespeed: yes
+          plugin_pagespeed_url: .user.website
+      # reactions
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics/reactions.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          plugin_reactions: yes
+          plugin_reactions_limit: 200 
+          plugin_reactions_limit_issues: 100  
+          plugin_reactions_days: 100
+          plugin_reactions_details: count, percentage
