--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,8 +19,8 @@ jobs:
         id: snake-gif
         with:
           github_user_name: Tarun-Kamboj
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          gif_out_path: Images/github-contribution-grid-snake.gif
+          svg_out_path: Images/github-contribution-grid-snake.svg
 
       - run: git status
 
@@ -33,7 +33,6 @@ jobs:
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: output
-          build_dir: dist
+          target_branch: master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
