--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -31,8 +31,8 @@ jobs:
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          target_branch: master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - uses: crazy-max/ghaction-github-pages@v2.1.3
+#         with:
+#           target_branch: master
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
