--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,26 +13,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+#       - uses: actions/checkout@v2
       
-      - uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: Tarun-Kamboj
-          gif_out_path: Images/github-contribution-grid-snake.gif
-          svg_out_path: Images/github-contribution-grid-snake.svg
+#       - uses: Platane/snk@master
+#         id: snake-gif
+#         with:
+#           github_user_name: Tarun-Kamboj
+#           gif_out_path: Images/github-contribution-grid-snake.gif
+#           svg_out_path: Images/github-contribution-grid-snake.svg
 
-      - run: git status
+#       - run: git status
 
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+#       - name: Push changes
+#         uses: ad-m/github-push-action@master
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           branch: master
+#           force: true
 
 #       - uses: crazy-max/ghaction-github-pages@v2.1.3
 #         with:
 #           target_branch: master
 #         env:
 #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - uses: Platane/snk@master
+          with:
+            github_user_name: ${{ github.repository_owner }}
+            svg_out_path: Image/github-snake.svg
