--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,42 +1,23 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-
 name: Generate Snake
-
 on:
   schedule:
       # every 6 hours
     - cron: "0 */6 * * *"
-    
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-#       - uses: actions/checkout@v2
-      
-#       - uses: Platane/snk@master
-#         id: snake-gif
-#         with:
-#           github_user_name: Tarun-Kamboj
-#           gif_out_path: Images/github-contribution-grid-snake.gif
-#           svg_out_path: Images/github-contribution-grid-snake.svg
-
-#       - run: git status
-
-#       - name: Push changes
-#         uses: ad-m/github-push-action@master
-#         with:
-#           github_token: ${{ secrets.GITHUB_TOKEN }}
-#           branch: master
-#           force: true
-
-#       - uses: crazy-max/ghaction-github-pages@v2.1.3
-#         with:
-#           target_branch: master
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        - uses: Platane/snk@master
-          with:
-            github_user_name: ${{ github.repository_owner }}
-            svg_out_path: Image/github-snake.svg
+      - name: generate snake.svg
+        uses: Platane/snk@master
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          svg_out_path: dist/snake.svg
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v2.5.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
