--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Generate Snake
+name: Deploy the Snake
 on:
   schedule:
       # every 6 hours
@@ -13,12 +13,3 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           svg_out_path: snake/snake.svg
-      - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.5.0
-        with:
-          target_branch: master
-          keep_history: true
-          build_dir: snake
-          commit_message: Deploying the Snake
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
