--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,7 @@
 name: Generate Metrics
 on:
   schedule:
-    - cron: "0 0-23/4 * * *"
+    - cron: "0 */4 * * *"
   push:
     branches:
       - master
