--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           svg_out_path: Images/Dynamic/snake.svg
-      - name: commit changes
+      - name: push snake
         uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
         with:
           add: 'Images/Dynamic/snake.svg'
