--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,7 +13,7 @@ jobs:
           github_user_name: ${{ github.repository_owner }}
           svg_out_path: Images/Dynamic/snake.svg
       - name: push snake
-        uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
+        uses: EndBug/add-and-commit@v7
         with:
           add: 'Images/Dynamic/snake.svg'
           author_name: Eternal_
