--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,7 +21,7 @@ jobs:
           plugin_screenshot: yes
           plugin_screenshot_title: Quote of the day
           plugin_screenshot_url: https://quotes-github-readme.vercel.app/api
-          plugin_screenshot_selector: "div" 
+          plugin_screenshot_selector: "foreignObject" 
           plugin_screenshot_background: no
       # joke screenshot
       - name: joke
